--- a/public/physics/index.vwf.yaml
+++ b/public/physics/index.vwf.yaml
@@ -14,7 +14,7 @@
 --- 
 extends: appscene.vwf
 properties:
-  ambientColor: [ 183, 183, 183 ]
+  ambientColor: [ 130, 130, 130 ]
   backgroundColor: [ 83, 157, 194 ]
 methods:
   initializeCamera:
@@ -43,15 +43,14 @@ children:
       friction: 0.99
       restitution: 0      
   light1:
-    extends: "http://vwf.example.com/light.vwf"
+    extends: "http://vwf.example.com/directionallight.vwf"
     implements:
     - http://vwf.example.com/glgeLight.vwf
     properties: 
-      lightType: "directional"
       distance: 2000
       intensity: 0.9
       color: [ 255, 255, 255 ]
-      translation: [ 0, 0, 1 ]
+      position: [ -0.7, 0.7, 0.3 ]
 scripts:
 - |
     this.initialize = function() {
