Updates the lighting

--- a/public/plane/index.vwf.yaml
+++ b/public/plane/index.vwf.yaml
@@ -35,15 +35,14 @@ children:
   sceneCenter:
     extends: http://vwf.example.com/node3.vwf  
   dir1:
-    extends: http://vwf.example.com/light.vwf
+    extends: http://vwf.example.com/directionallight.vwf
     implements:
     - http://vwf.example.com/glgeLight.vwf
     properties:
-      lightType: "directional"
       distance: 2000
       intensity: 0.9
       color: [ 255, 255, 255 ]
-      translation: [ 0, -100, 0 ]
+      position: [ 0, -1, 0 ]
       rotation: [ 0, 0, 1, 90 ]
       glge-constantAttenuation: 0.3
       glge-linearAttenuation: 0.00000001
