--- a/support/proxy/vwf.example.com/sound/soundManager.vwf.yaml
+++ b/support/proxy/vwf.example.com/sound/soundManager.vwf.yaml
@@ -17,6 +17,7 @@ methods:
   stopSoundInstance:
   stopSoundGroup:
   stopAllSoundInstances:
+  transmogrify:
 events:
   soundFinished:
   soundStarted:
