Update camera related tests, including fixing alpha channels on box and duck collada models, and simplifying yaml files where applicable. Refs #4052.

--- a/public/test/CamRotZ/index.vwf.yaml
+++ b/public/test/CamRotZ/index.vwf.yaml
@@ -16,7 +16,6 @@ extends: http://vwf.example.com/scene.vwf
 properties:
   counter:
 methods:
-  initializeCamera:
   update: 
 children:
   duck:
@@ -35,28 +34,17 @@ children:
       color: [ 255, 255, 255 ]
       glge-constantAttenuation: 0.3
       glge-linearAttenuation: 0.00000001
-      glge-quadraticAttenuation: 0.0000001  
+      glge-quadraticAttenuation: 0.0000001
       rotation: [ 1, 0, 0, -45 ]
-      translation: [0,-100,0]     
+      translation: [ 0, -100, 0 ]
 scripts:
 - | 
-    this.initialize = function()
-    {
-      this.dir1.translation = [0,-100,0];
-      this.counter = 0;
-      this.future(0).initializeCamera();
+    this.initialize = function() {
+      this.camera.navmode = "none";
       this.future(0.2).update();
     }
-
-    this.initializeCamera = function() {
-      this.camera.rotation = [0,1,0,0];
-      this.camera.translation = [0,0,0];
-      this.camera.navmode = "none";
-    }
-
-    this.update = function()
-    {
+    this.update = function() {
       this.counter++;
-      this.camera.rotation = [0,0,1,this.counter];
+      this.camera.rotation = [ 0, 0, 1, this.counter ];
       this.future(0.02).update();
     }
