--- a/public/test/CamPosY/index.vwf.yaml
+++ b/public/test/CamPosY/index.vwf.yaml
@@ -16,7 +16,6 @@ extends: http://vwf.example.com/scene.vwf
 properties:
   counter:
 methods:
-  initializeCamera:
   update: 
 children:
   duck:
@@ -33,29 +32,17 @@ children:
       color: [ 255, 255, 255 ]
       glge-constantAttenuation: 0.3
       glge-linearAttenuation: 0.00000001
-      glge-quadraticAttenuation: 0.0000001  
-      translation: [0,-300,0]
+      glge-quadraticAttenuation: 0.0000001
+      translation: [ 0, -300, 0 ]
 scripts:
 - | 
-    this.initialize = function()
-    {
-        this.dir1.translation = [0,-100,0];
-        this.duck.translation = [0,0,0];
-        this.counter = 0;
-        this.future(0).initializeCamera();
-        this.future(0.05).update();
+    this.initialize = function() {
+      this.camera.translation = [ 0, -600, 50 ];
+      this.camera.navmode = "none";
+      this.future(0.05).update();
     }
-
-    this.initializeCamera = function() {
-        this.camera.rotation = [0,1,0,0];
-        this.camera.translation = [0,-600,50];
-        this.camera.navmode = "none";
-    }
-
-    this.update = function()
-    {
-       
-        this.counter++;
-        this.camera.translation = [0,-500-Math.sin(this.counter/100)*100,0];
-        this.future(0.05).update();
+    this.update = function() {
+      this.counter++;
+      this.camera.translation = [ 0, -500-Math.sin(this.counter/100)*100, 0 ];
+      this.future(0.05).update();
     }
