--- a/public/test/cameraFov/index.vwf.yaml
+++ b/public/test/cameraFov/index.vwf.yaml
@@ -16,7 +16,6 @@ extends: http://vwf.example.com/scene.vwf
 properties:
   counter: 0
 methods:
-  initializeCamera:
   update:
 children:
   duck:
@@ -31,36 +30,26 @@ children:
       lightType: "point"
       distance: 2000
       intensity: 0.9
-      color: [ 255, 255, 255]
+      color: [ 255, 255, 255 ]
       glge-constantAttenuation: 1
       rotation: [ 1, 0, 0, -45 ]
-      translation: [0,-100,0]
+      translation: [ 0, -100, 0 ]
 scripts:
 - | 
     this.initialize = function()
     {
-      this.dir1.translation = [0,-100,0];
-      this.duck.translation = [0,0,0];
-      this.duck.rotation = [1,0,0,0]
-      this.counter = 0;
-      this.future(0).initializeCamera();
-      this.future(0.2).update();
-    }
-
-    this.initializeCamera = function() {
-      this.camera.rotation = [0,1,0,0];
-      this.camera.translation = [0,-600,50];
+      this.camera.translation = [ 0, -600, 50 ];
       this.camera.far = 800;
       this.camera.navmode = "none";
+      this.future(0.2).update();
     }
-
     this.update = function()
     {
       this.counter++;
-      this.duck.rotation = [0,0,1,this.counter/2];
+      this.duck.rotation = [ 0, 0, 1, this.counter/2 ];
       this.camera.fovy = 35 + 25 * Math.sin(this.counter/10);
      
-      if(this.counter == 200) {
+      if ( this.counter == 200 ) {
           this.counter = 0;
       }
       this.future(0.2).update();        
