--- a/public/test/createDelete/index.vwf.yaml
+++ b/public/test/createDelete/index.vwf.yaml
@@ -13,8 +13,9 @@
 
 --- 
 extends: http://vwf.example.com/scene.vwf
+properties:
+  counter: 0
 methods:
-  initializeCamera:
   update:  
 children:
   duck:
@@ -33,33 +34,21 @@ children:
       color: [ 255, 255, 255 ]
       glge-constantAttenuation: 0.3
       glge-linearAttenuation: 0.00000001
-      glge-quadraticAttenuation: 0.0000001  
+      glge-quadraticAttenuation: 0.0000001
       rotation: [ 1, 0, 0, -45 ]
-      translation: [ 0, -300, 0]    
+      translation: [ 0, -300, 0 ]
 scripts:
 - | 
-    this.initialize = function()
-    {
-      this.dir1.translation = [0,-100,0];
-      this.duck.translation = [0,0,0];
-      this.counter = 0;
-      this.future(0).initializeCamera();
+    this.initialize = function() {
+      this.camera.translation = [ 0, -600, 50 ];
+      this.camera.navmode = "none";
       this.future(0.02).update();
     }
-
-    this.initializeCamera = function() {
-      this.camera.rotation = [0,1,0,0];
-      this.camera.translation = [0,-600,50];
-      this.camera.navmode = "none";
-    }
-
-    this.update = function()
-    {
+    this.update = function() {
       this.counter++;
-      if(this.counter == 100)
+      if ( this.counter == 100 )
         this.children.delete( this.duck );
-      if(this.counter == 200)
-      {
+      if ( this.counter == 200 ) {
         var p = {
           extends: "http://vwf.example.com/node3.vwf",
           source: "duck.dae",
