--- a/public/test/materialColor/index.vwf.yaml
+++ b/public/test/materialColor/index.vwf.yaml
@@ -13,15 +13,12 @@
 
 --- 
 extends: http://vwf.example.com/scene.vwf
-methods:
-  initializeCamera:
 children:
   duck:
     extends: http://vwf.example.com/node3.vwf
     source: duck.dae
     type: model/vnd.collada+xml
     properties:
-      rotation: [ 0, 0, 1, 0]
       counter: 0
     children:
       material:
@@ -33,18 +30,15 @@ children:
       update:    
     scripts:
     - |
-         this.initialize = function()
-         {
-            this.counter = 0;
-            this.material.texture = "";
-            this.future(0.2).update();
-         }
-         this.update = function()   
-         {
-            this.counter++;
-            this.material.color = [127* (1+Math.sin(this.counter/100)),127* (1+Math.sin(this.counter/20)),127* (1+Math.sin(this.counter/30)),1];
-            this.future(0.2).update();
-         }
+        this.initialize = function() {
+          this.material.texture = "";
+          this.future(0.2).update();
+        }
+        this.update = function() {
+          this.counter++;
+          this.material.color = [ 127*(1+Math.sin(this.counter/100)), 127*(1+Math.sin(this.counter/20)), 127*(1+Math.sin(this.counter/30)), 1 ];
+          this.future(0.2).update();
+        }
   dir1:
     extends: http://vwf.example.com/light.vwf
     implements:
@@ -54,20 +48,14 @@ children:
       distance: 1000
       intensity: 1
       color: [ 255, 255, 255 ]
-      castShadows: false 
-      glge-constantAttenuation: 1
+      castShadows: false
       rotation: [ 1, 0, 0, -45 ]
-      translation: [ 50, -100, 110]
+      translation: [ 50, -100, 110 ]
 scripts:
 - | 
     this.initialize = function()
     {
-        this.duck.translation = [0,0,0];
-        this.future(0).initializeCamera();
-    }
-
-    this.initializeCamera = function() {
-        this.camera.rotation = [0,1,0,0];
-        this.camera.translation = [0,-600,50];
-        this.camera.navmode = "none";
+      this.duck.translation = [ 0, 0, 0 ];
+      this.camera.translation = [ 0, -600, 50 ];
+      this.camera.navmode = "none";
     }
