--- a/public/test/keyStates/index.vwf.yaml
+++ b/public/test/keyStates/index.vwf.yaml
@@ -19,9 +19,8 @@ children:
     source: duck.dae
     type: model/vnd.collada+xml    
     properties:
-      translation: [ 0, 0, 0]
-      rotation: [ 0, 0, 1, 0]
-      scale: [ .5, .5, .5]   
+      translation: [ 0, 0, 0 ]
+      rotation: [ 0, 0, 1, 0 ]
   dir1:
     extends: http://vwf.example.com/light.vwf
     implements:
@@ -32,22 +31,21 @@ children:
       distance: 2000
       intensity: 1.4
       color: [ 255, 255, 255 ]
-      glge-constantAttenuation: 0.3
-      glge-linearAttenuation: 0.00000001
-      glge-quadraticAttenuation: 0.0000001  
       rotation: [ 1, 0, 0, -45 ]
-      translation: [0,-100,0]
+      translation: [ 0, -100, 0 ]
 events:
   keyDown:
   keyUp:
 scripts:
 - | 
-    this.keyUp = function(states)
-    {    
+    this.initialize = function() {
+      this.camera.translation = [ 0, -600, 50 ];
+      this.camera.far = 800;
+    }
+    this.keyUp = function(states) {    
         console.log(states);
     }
-    this.keyDown = function(states)
-    {    
+    this.keyDown = function(states) {    
         console.log(states);
     }
     
