--- a/public/test/ParticleBasic/index.vwf.yaml
+++ b/public/test/ParticleBasic/index.vwf.yaml
@@ -13,8 +13,9 @@
 
 --- 
 extends: http://vwf.example.com/scene.vwf
+properties:
+  counter: 0
 methods:
-  initializeCamera:
   update:
 children:
   system:
@@ -45,30 +46,16 @@ children:
       distance: 2000
       intensity: 1.2
       color: [ 255, 255, 255 ]
-      glge-constantAttenuation: 0.3
-      glge-linearAttenuation: 0.00000001
-      glge-quadraticAttenuation: 0.0000001  
       rotation: [ 1, 0, 0, -45 ]
       translation: [0,-100,0]
 scripts:
 - | 
-    this.initialize = function()
-    {
-        this.dir1.translation = [0,-100,0];
-        this.system.translation = [0,0,0];
-        this.counter = 0;
-        this.future(0).initializeCamera();
-        this.future(.05).update();
-    } 
-
-    this.initializeCamera = function() {
-        this.camera.rotation = [0,1,0,0];
-        this.camera.translation = [0,-600,50];
-        this.camera.navmode = "none";      
+    this.initialize = function() {
+      this.camera.translation = [ 0, -600, 50 ];
+      this.camera.navmode = "none";      
+      this.future(.05).update();
     }
-
-    this.update = function()
-    {
-        this.counter++;
-        this.future(.05).update();
+    this.update = function() {
+      this.counter++;
+      this.future(.05).update();
     } //@ sourceURL=index.vwf
