--- a/public/test/ParticleNebula/index.vwf.yaml
+++ b/public/test/ParticleNebula/index.vwf.yaml
@@ -13,27 +13,23 @@
 
 --- 
 extends: http://vwf.example.com/scene.vwf
-methods:
-  initializeCamera:
-  update:
 events:
   pointerMove:
 children:
   system:
     extends: http://vwf.example.com/particlesystem.vwf
     properties:
-      minVelocity: [ -0.01, -0.01, -0.01]
-      maxVelocity: [ 0.01, 0.01, 0.01]
-      
-      maxAcceleration: [ 0, 0, 0]
-      minAcceleration: [ 0, 0, 0]
+      minVelocity: [ -0.01, -0.01, -0.01 ]
+      maxVelocity: [ 0.01, 0.01, 0.01 ]
+      maxAcceleration: [ 0, 0, 0 ]
+      minAcceleration: [ 0, 0, 0 ]
       startSize: 130
       image: nebula.jpg
       endSize: 50
       maxLifeTime: 220
       minLifeTime: 220
-      startColor: [ 1, 1, 1, 0.05]
-      endColor: [ 0, 0, 1, 0.0]
+      startColor: [ 1, 1, 1, 0.05 ]
+      endColor: [ 0, 0, 1, 0.0 ]
       additive: true
       opacity: 1
       maxOrientation: 9
@@ -41,9 +37,9 @@ children:
       depthTest: false
       particleCount: 500
       gravity: 140
-      gravityCenter: [ 0, 0, 100]  #worldspace
+      gravityCenter: [ 0, 0, 100 ]  #worldspace
       emitterType: box
-      emitterSize: [ 50, 50, 5]
+      emitterSize: [ 50, 50, 5 ]
       solver: 'Euler'
       damping: 0.0001
       maxRate: .5
@@ -57,35 +53,15 @@ children:
       distance: 2000
       intensity: 1.2
       color: [ 255, 255, 255 ]
-      glge-constantAttenuation: 0.3
-      glge-linearAttenuation: 0.00000001
-      glge-quadraticAttenuation: 0.0000001  
       rotation: [ 1, 0, 0, -45 ]
-      translation: [0,-100,0]
+      translation: [ 0, -100, 0 ]
 scripts:
 - | 
-    this.initialize = function()
-    {
-        this.dir1.translation = [0,-100,0];
-        this.system.translation = [0,-600,50];
-        this.counter = 0;
-        this.future(0).initializeCamera();
-        this.future(.05).update();
+    this.initialize = function() {
+      this.system.translation = [ 0, -600, 50 ];
+      this.camera.translation = [ 0, -600, 50 ];
+      this.camera.navmode = "none";
     }
-    this.initializeCamera = function() {
-        this.camera.rotation = [0,1,0,0];
-        this.camera.translation = [0,-600,50];
-        this.camera.navmode = "none";
-    }
-    this.update = function()
-    {
-        this.counter++;
-        this.future(.05).update();
-    }
-    this.pointerMove = function(e,ed)
-    {
-      
-        //this.system.translation = [e.position[0]*550.0-275.0,0,-e.position[1]*400+250];
-    
-    
+    this.pointerMove = function(e,ed) {
+      //this.system.translation = [ e.position[0]*550.0-275.0, 0, -e.position[1]*400+250 ];  
     } //@ sourceURL=index.vwf
