--- a/public/test/ParticleOrbit/index.vwf.yaml
+++ b/public/test/ParticleOrbit/index.vwf.yaml
@@ -13,19 +13,16 @@
 
 --- 
 extends: http://vwf.example.com/scene.vwf
-methods:
-  initializeCamera:
-  update:
 events:
   pointerMove:
 children:
   system:
     extends: http://vwf.example.com/particlesystem.vwf
     properties:
-      minVelocity: [ 0, 0, 1.3]
-      maxVelocity: [ 0, 0, 1.3]
-      maxAcceleration: [ 0, 0, 0]
-      minAcceleration: [ 0, 0, 0]
+      minVelocity: [ 0, 0, 1.3 ]
+      maxVelocity: [ 0, 0, 1.3 ]
+      maxAcceleration: [ 0, 0, 0 ]
+      minAcceleration: [ 0, 0, 0 ]
       startSize: 130
       image: nebula.jpg
       textureTiles: 2
@@ -33,17 +30,17 @@ children:
       sizeRange: 50
       maxLifeTime: 3000
       minLifeTime: 220
-      startColor: [ 1, 0.5, 0.5, 0.1]
-      endColor: [ 1, 0.2, 0.2, 0.1]
-      colorRange: [ .5, .5, .5, .05]
+      startColor: [ 1, 0.5, 0.5, 0.1 ]
+      endColor: [ 1, 0.2, 0.2, 0.1 ]
+      colorRange: [ .5, .5, .5, .05 ]
       additive: true
       opacity: 1
       depthTest: false
       particleCount: 1500
       gravity: 140
-      gravityCenter: [ 0, 0, 100]  #worldspace
+      gravityCenter: [ 0, 0, 100 ]  #worldspace
       emitterType: sphere
-      emitterSize: [ 1, 1, 5]
+      emitterSize: [ 1, 1, 5 ]
       solver: 'Euler'
       damping: 0.0006
       maxRate: .5
@@ -54,10 +51,10 @@ children:
   system2:
     extends: http://vwf.example.com/particlesystem.vwf
     properties:
-      minVelocity: [ 0, 0, -1.2]
-      maxVelocity: [ 0, 0, -1.2]
-      maxAcceleration: [ 0, 0, 0]
-      minAcceleration: [ 0, 0, 0]
+      minVelocity: [ 0, 0, -1.2 ]
+      maxVelocity: [ 0, 0, -1.2 ]
+      maxAcceleration: [ 0, 0, 0 ]
+      minAcceleration: [ 0, 0, 0 ]
       startSize: 130
       image: nebula.jpg
       textureTiles: 2
@@ -65,17 +62,17 @@ children:
       sizeRange: 20
       maxLifeTime: 3000
       minLifeTime: 2200
-      startColor: [ .5, .5, 1, 0.1]
-      endColor: [ .5, .5, 1, 0.1]
-      colorRange: [ .5, .5, .5, .05]
+      startColor: [ .5, .5, 1, 0.1 ]
+      endColor: [ .5, .5, 1, 0.1 ]
+      colorRange: [ .5, .5, .5, .05 ]
       additive: true
       opacity: 1
       depthTest: false
       particleCount: 1500
       gravity: 140
-      gravityCenter: [ 0, 0, 100]  #worldspace
+      gravityCenter: [ 0, 0, 100 ]  #worldspace
       emitterType: sphere
-      emitterSize: [ 1, 1, 5]
+      emitterSize: [ 1, 1, 5 ]
       solver: 'Euler'
       damping: 0.0006
       maxRate: .5
@@ -85,44 +82,22 @@ children:
       minSpin: 3    
   dir1:
     extends: http://vwf.example.com/light.vwf
-    implements:
-    - http://vwf.example.com/glgeLight.vwf
     properties:
       lightType: "point"
       enable: true
       distance: 2000
       intensity: 1.2
       color: [ 255, 255, 255 ]
-      glge-constantAttenuation: 0.3
-      glge-linearAttenuation: 0.00000001
-      glge-quadraticAttenuation: 0.0000001  
       rotation: [ 1, 0, 0, -45 ]
       translation: [0,-100,0]
 scripts:
 - | 
-    this.initialize = function()
-    {
-        this.dir1.translation = [0,-100,0];
-        this.system.translation = [-257.94303797468353, 0, 108.73741994510519];
-        this.system2.translation = [257.94303797468353, 0, 92];
-        this.counter = 0;
-        this.future(0).initializeCamera();
-        this.future(.05).update();
+    this.initialize = function() {
+      this.system.translation = [ -257.94303797468353, 0, 108.73741994510519 ];
+      this.system2.translation = [ 257.94303797468353, 0, 92 ];
+      this.camera.translation = [ 0, -800, 150 ];
+      this.camera.navmode = "none";
     }
-    this.initializeCamera = function() {
-        this.camera.rotation = [0,1,0,0];
-        this.camera.translation = [0,-800,150];
-        this.camera.navmode = "none";
-    }
-    this.update = function()
-    {
-        this.counter++;
-        this.future(.05).update();
-    }
-    this.pointerMove = function(e,ed)
-    {
-      
-        this.system.translation = [e.position[0]*550.0-275.0,0,-e.position[1]*400+250];
-    
-    
+    this.pointerMove = function(e,ed) {
+      this.system.translation = [ e.position[0]*550.0-275.0, 0, -e.position[1]*400+250 ];    
     } //@ sourceURL=index.vwf
