--- a/public/test/ParticleTest2/index.vwf.yaml
+++ b/public/test/ParticleTest2/index.vwf.yaml
@@ -13,23 +13,20 @@
 
 --- 
 extends: http://vwf.example.com/scene.vwf
-methods:
-  initializeCamera:
-  update:
 children:
   system:
     extends: http://vwf.example.com/particlesystem.vwf
     properties:
-      minVelocity: [ -1, -1, 1]
-      maxVelocity: [ 1, 1, 1.5]
-      maxAcceleration: [ 0, 0, 0.1]
-      minAcceleration: [ 0, 0, 0.0]
+      minVelocity: [ -1, -1, 1 ]
+      maxVelocity: [ 1, 1, 1.5 ]
+      maxAcceleration: [ 0, 0, 0.1 ]
+      minAcceleration: [ 0, 0, 0.0 ]
       startSize: 30
       endSize: 160
       maxLifeTime: 120
       minLifeTime: 30
-      startColor: [ 1, 1, 1, 1]
-      endColor: [ 0, 0, 0, 0]
+      startColor: [ 1, 1, 1, 1 ]
+      endColor: [ 0, 0, 0, 0 ]
       image: smoke.png
       additive: false
       opacity: .5
@@ -46,32 +43,11 @@ children:
       distance: 2000
       intensity: 1.2
       color: [ 255, 255, 255 ]
-      glge-constantAttenuation: 0.3
-      glge-linearAttenuation: 0.00000001
-      glge-quadraticAttenuation: 0.0000001  
       rotation: [ 1, 0, 0, -45 ]
       translation: [0,-100,0]
 scripts:
 - | 
-    this.initialize = function()
-    {
-        this.dir1.translation = [0,-100,0];
-        this.system.translation = [0,0,0];
-        this.counter = 0;
-        this.future(0).initializeCamera();
-        this.future(.05).update();
-    }
-
-    this.initializeCamera = function() {
-        this.camera.rotation = [0,1,0,0];
-        this.camera.translation = [0,-600,50];
-        this.camera.navmode = "none";
-    }
-
-    this.update = function()
-    {
-        this.counter++;
-    //    this.system.translation = [Math.sin(this.counter/100)*300 - 150,0,0];
-    //    this.system.rotation = [0,1,0,this.counter*4];
-        this.future(.05).update();
+    this.initialize = function() {
+      this.camera.translation = [ 0, -600, 50 ];
+      this.camera.navmode = "none";
     } //@ sourceURL=index.vwf
