--- a/public/test/ParticleTestColorRange/index.vwf.yaml
+++ b/public/test/ParticleTestColorRange/index.vwf.yaml
@@ -13,31 +13,28 @@
 
 --- 
 extends: http://vwf.example.com/scene.vwf
-methods:
-  initializeCamera:
-  update:
 children:
   system:
     extends: http://vwf.example.com/particlesystem.vwf
     properties:
-      minVelocity: [ 0, 0, 0.0]
-      maxVelocity: [ 0, 0, 0]
-      maxAcceleration: [ 0, 0, 0.0]
-      minAcceleration: [ 0, 0, 0.0]
+      minVelocity: [ 0, 0, 0.0 ]
+      maxVelocity: [ 0, 0, 0 ]
+      maxAcceleration: [ 0, 0, 0.0 ]
+      minAcceleration: [ 0, 0, 0.0 ]
       startSize: 30
       endSize: 30
       sizeRange: 60
       maxLifeTime: 50
       minLifeTime: 30
-      startColor: [ .5, .5, .5, 1]
-      endColor: [ 0, 0, 0, 0]
-      colorRange: [ .5, .5, .5, .3]
+      startColor: [ .5, .5, .5, 1 ]
+      endColor: [ 0, 0, 0, 0 ]
+      colorRange: [ .5, .5, .5, .3 ]
       image: smoke.png
       additive: false
       depthTest: false
       maxOrientation: 9
       minOrientation: 3
-      emitterSize: [ 1000 , 0 , 1000.0 ]
+      emitterSize: [ 1000, 0, 1000.0 ]
       emitterType: box
   dir1:
     extends: http://vwf.example.com/light.vwf
@@ -49,32 +46,11 @@ children:
       distance: 2000
       intensity: 1.2
       color: [ 255, 255, 255 ]
-      glge-constantAttenuation: 0.3
-      glge-linearAttenuation: 0.00000001
-      glge-quadraticAttenuation: 0.0000001  
       rotation: [ 1, 0, 0, -45 ]
-      translation: [0,-100,0]
+      translation: [ 0, -100, 0 ]
 scripts:
 - | 
-    this.initialize = function()
-    {
-        this.dir1.translation = [0,-100,0];
-        this.system.translation = [0,0,0];
-        this.counter = 0;
-        this.future(0).initializeCamera();
-        this.future(.05).update();
-    } 
-
-    this.initializeCamera = function() {
-        this.camera.rotation = [0,1,0,0];
-        this.camera.translation = [0,-600,50];
+    this.initialize = function() {
+        this.camera.translation = [ 0, -600, 50 ];
         this.camera.navmode = "none";
-    }
-
-    this.update = function()
-    {
-        this.counter++;
-    //    this.system.translation = [Math.sin(this.counter/100)*300 - 150,0,0];
-    //    this.system.rotation = [0,1,0,this.counter*4];
-        this.future(.05).update();
     } //@ sourceURL=index.vwf
