--- a/public/test/UTF8/index.vwf.yaml
+++ b/public/test/UTF8/index.vwf.yaml
@@ -13,8 +13,6 @@
 
 --- 
 extends: http://vwf.example.com/scene.vwf
-methods:
-  initializeCamera:
 children:
   duck:
     extends: http://vwf.example.com/node3.vwf
@@ -23,44 +21,30 @@ children:
     type: model/vnd.osgjs+json+compressed
     methods:
       update: 
-    properties:
-      rotation: [ 1, 0, 0, 0 ]
-      translation: [ 0, 0, 0]
-      scale: [ 1, 1, 1]
     scripts:
     - |
-        this.initialize = function() { this.future(0.1).update(); }
-        this.update = function()
-        {   
+        this.initialize = function() { 
+          this.future(0.1).update(); 
+        }
+        this.update = function() {   
           if(this.rotation[3] >= 179)
-            this.rotation = [1,0,0,0];
-          this.rotation = [1,0,0,this.rotation[3]+1];
+            this.rotation = [ 1, 0, 0, 0 ];
+          this.rotation = [ 1, 0, 0, this.rotation[3]+1 ];
           this.future(0.1).update();
         }
   dir1:
     extends: http://vwf.example.com/light.vwf
-    implements:
-    - http://vwf.example.com/glgeLight.vwf
     properties:
       lightType: "directional"
       distance: 1000
       intensity: 1
       color: [ 255, 255, 255 ]
-      castShadows: false  
-      glge-constantAttenuation: 1
+      castShadows: false
       rotation: [ 1, 0, 0, -45 ]
-      translation: [0,-10,10]
+      translation: [ 10,-10, 10 ]
 scripts:
 - | 
-    this.initialize = function()
-    {
-        this.dir1.translation = [10,-10,10];
-        this.duck.translation = [0,0,0];
-        this.future(0).initializeCamera();
-    }
-
-    this.initializeCamera = function() {
-        this.camera.rotation = [0,1,0,0];
+    this.initialize = function() {
         this.camera.translation = [0,-660,50];
         this.camera.navmode = "none";
     }
