--- a/public/test/sceneAmbient/index.vwf.yaml
+++ b/public/test/sceneAmbient/index.vwf.yaml
@@ -15,7 +15,7 @@
 extends: http://vwf.example.com/scene.vwf
 properties:
   counter: 0
-  ambientColor: [183,183,183]
+  ambientColor: [ 183, 183, 183 ]
 methods:
   initializeCamera:
   update:  
@@ -26,42 +26,25 @@ children:
     type: model/vnd.collada+xml
   dir1:
     extends: http://vwf.example.com/light.vwf
-    implements:
-    - http://vwf.example.com/glgeLight.vwf
     properties:
       lightType: "point"
       enable: true
       distance: 2000
       intensity: 1.4
       color: [ 255, 255, 255 ]
-      glge-constantAttenuation: 0.3
-      glge-linearAttenuation: 0.00000001
-      glge-quadraticAttenuation: 0.0000001  
       rotation: [ 1, 0, 0, -45 ]
-      translation: [0,-100,0]
+      translation: [ 0, -100, 0 ]
 scripts:
 - | 
-    this.initialize = function()
-    {
-        this.dir1.translation = [0,-100,0];
-        this.dir1.color = [0,0,0];
-        this.duck.translation = [0,0,0];
-        this.future(0).initializeCamera();
-        this.future(0.1).update();
-        
+    this.initialize = function() {
+      this.camera.translation = [ 0, -600, 50 ];
+      this.camera.navmode = "none";
+      this.future(0.1).update();   
     }
-
-    this.initializeCamera = function() {
-        this.camera.rotation = [0,1,0,0];
-        this.camera.translation = [0,-600,50];
-        this.camera.navmode = "none";
-    }
-
-    this.update = function()
-    {
-        this.ambientColor = [(Math.sin(this.counter/10) + 1)/2 * 255, 
-                            (Math.sin(this.counter/20) + 1)/2 * 255,
-                            (Math.sin(this.counter/30) + 1)/2 * 255];
-        this.counter++;
-        this.future(0.1).update();
+    this.update = function() {
+      this.ambientColor = [(Math.sin(this.counter/10) + 1)/2 * 255, 
+                           (Math.sin(this.counter/20) + 1)/2 * 255,
+                           (Math.sin(this.counter/30) + 1)/2 * 255];
+      this.counter++;
+      this.future(0.1).update();
     }
