--- a/public/test/shadows/index.vwf.yaml
+++ b/public/test/shadows/index.vwf.yaml
@@ -17,7 +17,6 @@ properties:
   enableShadows: true
   counter: 0
 methods:
-  initializeCamera:
   update:
 children:
   duck:
@@ -51,27 +50,17 @@ children:
       shadowCameraTop: 500
 scripts:
 - | 
-    this.initialize = function()
-    {
-        this.duck.rotation = [1,0,0,0];
-        this.counter = 0;
-        this.future(0).initializeCamera();
-        this.future(0.1).update();
+    this.initialize = function() {
+      this.camera.transform = [-0.353651762008667,-0.9353719353675842,-3.3963152645810624e-7,0,0.8425261974334717,-0.3185476064682007,-0.4343765377998352,0,0.4063078761100769,-0.15361760556697845,0.9007351398468018,0,-884.6788330078125,256.3238220214844,533.33251953125,1];
+      this.camera.far = 8000;
+      this.future(0.1).update();
     }
-
-    this.initializeCamera = function() {
-        this.camera.transform = [-0.353651762008667,-0.9353719353675842,-3.3963152645810624e-7,0,0.8425261974334717,-0.3185476064682007,-0.4343765377998352,0,0.4063078761100769,-0.15361760556697845,0.9007351398468018,0,-884.6788330078125,256.3238220214844,533.33251953125,1];
-        this.camera.far = 8000;
-    }
-
-    this.update = function()
-    {
-        this.counter++;
-        this.duck.rotation = [0,0,1,this.counter/2];
+    this.update = function() {
+      this.counter++;
+      this.duck.rotation = [ 0, 0, 1, this.counter ];
        
-        if(this.counter == 200)
-        {
-            this.counter = 0;
-        }
-        this.future(0.1).update();
+      if(this.counter == 360) {
+        this.counter = 0;
+      }
+      this.future(0.1).update();
     }
