--- a/public/test/texture/index.vwf.yaml
+++ b/public/test/texture/index.vwf.yaml
@@ -13,8 +13,6 @@
 
 --- 
 extends: http://vwf.example.com/scene.vwf
-methods:
-  initializeCamera:
 children:
   duck:
     extends: http://vwf.example.com/node3.vwf
@@ -32,54 +30,37 @@ children:
       update:    
     scripts:
     - |
-         this.initialize = function()
-         {
-                this.counter = 0;
-               alert(this.material.texture);
-               this.future(0.1).update();
-         }
-         this.update = function()   
-         {
-            this.counter++;
-            if(this.counter == 100)
-                this.material.texture = "duck1.png";
-            if(this.counter == 200)
-            {    
-                 this.material.texture = "duck2.png";
-            }
-            if(this.counter == 300)
-            {    
-                 this.material.texture = "";
-                 this.counter = 0;
-            }
-            this.future(0.1).update();    
-         }
+        this.initialize = function() {
+          this.counter = 0;
+          alert(this.material.texture);
+          this.future(0.1).update();
+        }
+        this.update = function() {
+          this.counter++;
+          if(this.counter == 100)
+            this.material.texture = "duck1.png";
+          if(this.counter == 200) {
+            this.material.texture = "duck2.png";
+          }
+          if(this.counter == 300) {
+            this.material.texture = "";
+            this.counter = 0;
+          }
+          this.future(0.1).update();
+        }
   dir1:
     extends: http://vwf.example.com/light.vwf
-    implements:
-    - http://vwf.example.com/glgeLight.vwf
     properties:
       lightType: "point"
       enable: true
       distance: 2000
       intensity: 1.4
       color: [ 255, 255, 255 ]
-      glge-constantAttenuation: 0.3
-      glge-linearAttenuation: 0.00000001
-      glge-quadraticAttenuation: 0.0000001  
       rotation: [ 1, 0, 0, -45 ]
       translation: [0,-100,0]
 scripts:
 - | 
-    this.initialize = function()
-    {
-        this.dir1.translation = [0,-100,0];
-        this.duck.translation = [0,0,0];
-        this.future(0).initializeCamera();
-    }
-
-    this.initializeCamera = function() {
-        this.camera.rotation = [0,1,0,0];
-        this.camera.translation = [0,-600,50];
-        this.camera.navmode = "none";
+    this.initialize = function() {
+      this.camera.translation = [0,-600,50];
+      this.camera.navmode = "none";
     }
