Now we delete TTS sounds that we play.

--- a/support/proxy/vwf.example.com/sound/soundManager.vwf.yaml
+++ b/support/proxy/vwf.example.com/sound/soundManager.vwf.yaml
@@ -3,6 +3,7 @@ extends: http://vwf.example.com/node.vwf
 methods:
   setVoiceSet:
   loadSound:
+  unloadSound:
   clearAllSounds:
   isReady:
   playSound:
