--- a/public/stereo/index.vwf.config.yaml
+++ b/public/stereo/index.vwf.config.yaml
@@ -19,4 +19,4 @@ model:
   vwf/model/buzz:
 view:
   vwf/view/editor:
-  vwf/view/threejs: { "application-root": "#vwf-root", "stereo": false }
+  vwf/view/threejs: { "application-root": "#vwf-root", "stereo": true }
