--- a/public/stereo/index.vwf.yaml
+++ b/public/stereo/index.vwf.yaml
@@ -13,10 +13,14 @@
 
 --- 
 extends: http://vwf.example.com/scene.vwf
+implements:
+- http://vwf.example.com/threejs/fogExp2.vwf
 properties:
   navmode: walk
   rotationSpeed: 2
   translationSpeed: 10
+  fogexp_color: 0x000000
+  fogexp_destiny: 0.0025
 children:
   floor:
     extends: http://vwf.example.com/threejs/plane.vwf
@@ -59,18 +63,49 @@ scripts:
         this.camera.near = 1;  
         this.camera.far = 100000;
 
-        var boxDef = {
+        var boxDef = function() {
+          return {
+            "extends": 'http://vwf.example.com/threejs/cube.vwf',
+            "type": 'mesh/definition',
+            "properties": {
+              "meshDefinition": { 
+                "width": 5, 
+                "height": 5, 
+                "depth": 5, 
+                "widthSegments": 1, 
+                "heightSegments": 1, 
+                "depthSegments": 1 
+              }, 
+              "translation": [ 0, 0, 0 ]
+            }
+          }
+        };
+
+        var boxParent = {
           "extends": 'http://vwf.example.com/threejs/cube.vwf',
           "type": 'mesh/definition',
           "properties": {
-            "meshDefinition": { "width": 5, "height": 5, "depth": 5, "widthSegments": 1, "heightSegments": 1, "depthSegments": 1 }, 
+            "meshDefinition": { 
+              "width": 5, 
+              "height": 5, 
+              "depth": 5, 
+              "widthSegments": 1,
+              "heightSegments": 1, 
+              "depthSegments": 1,
+              "children": {} 
+            }, 
             "translation": [ 0, 0, 0 ]
           },
           "children": {
             "material": {
               "extends": 'http://vwf.example.com/material.vwf',
+              "type": 'material/definition',
               "properties": {
-                "texture": 'images/UV_Grid_Sm.jpg'
+                "materialDefinition": {
+                  "type": 'MeshBasicMaterial',
+                  "side": 2,
+                  "texture": 'images/UV_Grid_Sm.jpg'
+                }
               }
             }
           }
@@ -79,21 +114,18 @@ scripts:
         var i, j, k;
         i = j = k = 0;
         var boxCount = 1; 
+        var boxChild = boxParent.properties.meshDefinition.children;
 
-        boxDef.properties.translation = [ 0, 30, 10 ];
-        this.children.create( "box"+boxCount, boxDef );         
+        for( i = 0; i < 10; i++ ) {
+            for( j = 0; j < 10; j++ ) {
+                for( var k = 0; k < 10; k++ ) {
+                    boxChild[ "box"+boxCount ] = boxDef();
+                    boxChild[ "box"+boxCount ].type = "box";
+                    boxChild[ "box"+boxCount ].properties.translation = [ 7+20*(5-i), 7+20*(5-j), 10+20*k ];
+                    boxCount++;
+                }
+            }
+        }
 
-
-        //for( i = 0; i < 10; i++ ) {
-        //    for( j = 0; j < 10; j++ ) {
-        //        for( var k = 0; k < 10; k++ ) {
-        //            boxDef.properties.translation = [ 7+20*(5-i), 7+20*(5-j), 10+20*k ];
-        //            this.children.create( "box"+boxCount, boxDef ); 
-        //            boxCount++;
-        //        }
-        //    }
-        //}
-
-        // [0.8431670665740967,-0.5376511812210083,8.762983227939003e-9,0,0.5376242399215698,0.8431246876716614,-0.010019084438681602,0,0.00538675207644701,0.008447757922112942,0.9999498128890991,0,-479.1357116699219,-661.0462036132812,100.25996398925781,1]
-
+        this.children.create( "box", boxParent ); 
     }    
