--- a/support/proxy/vwf.example.com/cesium/geometry.vwf.yaml
+++ b/support/proxy/vwf.example.com/cesium/geometry.vwf.yaml
@@ -11,7 +11,7 @@
 # or implied. See the License for the specific language governing permissions and limitations under
 # the License.
 
-## Cesium base 3d object component
+## Cesium base geometry object component
 ## 
 ## @name cesium.vwf
 ## @namespace
@@ -19,6 +19,5 @@
 --- 
 extends: http://vwf.example.com/cesium/node3.vwf
 properties:
-  position: [ 0, 0 ]
-  color: [ 255, 255, 255, 1 ] 
+  geometryDefinition:
   modelMatrix:
