--- a/support/proxy/vwf.example.com/cesium/node3.vwf.yaml
+++ b/support/proxy/vwf.example.com/cesium/node3.vwf.yaml
@@ -24,6 +24,7 @@ properties:
   visible: true
   position: [ 0, 0, 0 ]
   color: [ 255, 255, 255, 1 ]
+  modelMatrix:
 methods:
   translateBy:
   translateTo:
